syntax = "proto3";

package policy;

option go_package = "grpc-gateway-template/grpc-proto/proto/policy";

import "google/api/annotations.proto";

// Here is the overall greeting service definition where we define all our endpoints
service Policy {
  // Sends a greeting
  rpc CreatePolicy (CreatePolicyRequest) returns (CreatePolicyResponse) {
    option (google.api.http) = {
      post: "/v2/policy/echo/{name}"
      body: "*"
    };
  }
}

// The request message containing the user's name
message CreatePolicyRequest {
  string name = 1;
}

// The response message containing the greetings
message CreatePolicyResponse {
  string message = 1;
}